--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,700' rel='stylesheet'>
 </head>
 <body>
 
@@ -26,13 +26,9 @@
 
 <ul>
     <li class="bannerTiles" style="background-image: url(&quot;https://s3.rdbuz.com/Images/ReddealsCards/IND/SafetyPlus_MainCard.svg&quot;);">
-        <div class="bannerShort"> </div>
-        <div class="bannerDes"></div>
     </li>
 
     <li class="bannerTiles fl" style="background-image: url(&quot;https://s3.rdbuz.com/Images/ReddealsCards/IND/4_10_MainCard.svg&quot;);">
-        <div class="bannerShort"></div>
-        <div class="bannerDes"></div>
     </li>
 </ul>
 
@@ -48,7 +44,7 @@
     <div class="main-content">
        <div class="firstrow">
            <div class="reststop">1 REST STOP</div>
-           <div class="timings">21:55- 05:00</div>
+           <div class="timings"><strong>21:55</strong> - 05:00</div>
            <div class="hrs">7h 05m . 22 Seats</div>
        </div>
        <div class="secondrow">
@@ -76,7 +72,7 @@
         <div class="discount"></div>
         <div class="fareprice">
             <div class="starts">Starts from</div>
-            <div class="charge">INR
+            <div class="charge">&#8377;
                 <span class="amount">500</span>
             </div>
         </div>
@@ -109,7 +105,7 @@
     <div class="main-content">
        <div class="firstrow">
            <div class="reststop">1 REST STOP</div>
-           <div class="timings">21:55- 05:00</div>
+           <div class="timings"><strong>21:55</strong> - 05:00</div>
            <div class="hrs">7h 05m . 22 Seats</div>
        </div>
        <div class="secondrow">
@@ -139,7 +135,7 @@
           </svg> 10% OFF</strong></p></div>
         <div class="fareprice">
             <div class="starts">Starts from</div>
-            <div class="charge">INR
+            <div class="charge">&#8377;
                 <span class="amount">500</span>
             </div>
         </div>
@@ -157,7 +153,7 @@
     <div class="main-content">
        <div class="firstrow">
            <div class="reststop">1 REST STOP</div>
-           <div class="timings">21:55- 05:00</div>
+           <div class="timings"><strong>21:55</strong> - 05:00</div>
            <div class="hrs">7h 05m . 22 Seats</div>
        </div>
        <div class="secondrow">
@@ -187,7 +183,7 @@
           </svg> 10% OFF</strong></p></div>
         <div class="fareprice">
             <div class="starts">Starts from</div>
-            <div class="charge">INR
+            <div class="charge">&#8377;
                 <span class="amount">500</span>
             </div>
         </div>
@@ -205,7 +201,7 @@
     <div class="main-content">
        <div class="firstrow">
            <div class="reststop">1 REST STOP</div>
-           <div class="timings">21:55- 05:00</div>
+           <div class="timings"><strong>21:55</strong> - 05:00</div>
            <div class="hrs">7h 05m . 22 Seats</div>
        </div>
        <div class="secondrow">
@@ -235,7 +231,7 @@
           </svg> 10% OFF</strong></p></div>
         <div class="fareprice">
             <div class="starts">Starts from</div>
-            <div class="charge">INR
+            <div class="charge">&#8377;
                 <span class="amount">500</span>
             </div>
         </div>
